#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(api)
add_subdirectory(application)
add_subdirectory(authorship)
add_subdirectory(clock)
add_subdirectory(common)
add_subdirectory(consensus)
add_subdirectory(crypto)
add_subdirectory(extensions)
add_subdirectory(injector)
add_subdirectory(primitives)
add_subdirectory(runtime)
add_subdirectory(scale)
add_subdirectory(storage)
add_subdirectory(transaction_pool)
add_subdirectory(blockchain)
add_subdirectory(network)
add_subdirectory(outcome)
