#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
#
# Kagome is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Kagome is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

add_subdirectory(api)
add_subdirectory(application)
add_subdirectory(authorship)
add_subdirectory(clock)
add_subdirectory(common)
add_subdirectory(consensus)
add_subdirectory(crypto)
add_subdirectory(extensions)
add_subdirectory(injector)
add_subdirectory(primitives)
add_subdirectory(runtime)
add_subdirectory(scale)
add_subdirectory(storage)
add_subdirectory(transaction_pool)
add_subdirectory(blockchain)
add_subdirectory(network)
add_subdirectory(outcome)
