[package]
name = "rust-kad"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
libc = "0.2.158"
libp2p = { version = "0.54.1", default-features = false, features = [
  "dns",
  "ecdsa",
  "identify",
  "kad",
  "macros",
  "noise",
  "ping",
  "rsa",
  "secp256k1",
  "tcp",
  "tokio",
  "websocket",
  "yamux",
] }
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
tokio = { version = "1.38", default-features = false, features = [
  "io-std",
  "macros",
  "sync",
] }
tokio-fd = "0.3.0"
tokio-util = { version = "0.7.11", features = ["codec"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
